--- a/app/views/sites/post.scala.html
+++ b/app/views/sites/post.scala.html
@@ -13,32 +13,110 @@ title =  "食美特，不一样的生活"
     <div class="post">
         <!--  post left  about post admin -->
         <div class="post-left">
-                   <div class="site-logo">
-                       <a><img width="180" height="180" src="/assets/temp/site.jpg"></a>
-                   </div>
-                   <h3 class="site-title"><a> xxxx xxxxx 小站</a></h3>
+            <div class="poster clearfix">
 
-            <div class="follow clearfix">
-                <a class="follow-btn"> + 加入小站</a>
-                <!-- <div class="followed-btn-big">已关注<span class="mr5 ml5">|</span><a rel="removefollow" data-followtype="5" data-usernick="duanyu200888" data-userid="3" href="javascript:;">取消</a></div>-->
+                    <a class="pic"><img src="/images/user/default.jpg" width="100" height="100" class="c"> </a>
+                    <span><a>zuosanshao</a></span>
+                    <span>发表于<em>2013/06/24</em></span>
+                   <span>22人看过</span>
+
+                <div class="follow">
+                    <a class="follow-btn">+关注</a>
+                </div>
             </div>
+                   <div class="post-site">
+                       <a><img width="160" height="160" src="/assets/temp/site.jpg"></a>
+                       <h3 class="site-title"><a> xxxx xxxxx 小站</a></h3>
+                       <div class="back-site"><a>返回小站</a> </div>
+                       <div class="follow clearfix">
+                           <a class="follow-btn"> + 加入小站</a>
+                           <!-- <div class="followed-btn-big">已关注<span class="mr5 ml5">|</span><a rel="removefollow" data-followtype="5" data-usernick="duanyu200888" data-userid="3" href="javascript:;">取消</a></div>-->
+                       </div>
+                   </div>
+
+
         </div>
         <!-- post main content-->
         <div class="post-main">
               <h3 class="post-title"> 器世界 手工柴烧侧把壶 原创设计 品质生活 </h3>
-              <div class="post-author">
-                 <dl class="author">
-                     <dt><a><img src="/images/user/default.jpg" width="50" height="50"> </a> </dt>
-                     <dd><a>zuosanshao</a></dd>
-                     <dd>发表于<em>2013/06/24</em><em class="mr10">11:11:51</em>22人看过</dd>
-                 </dl>
-                  <a class="follow-btn">+关注</a>
-              </div>
-            <div class="post-content"></div>
+
+            <ul class="menu clearfix">
+                <li><strong>工艺</strong><a href="####" title="橙皮辫子面的工艺" class="big">烘焙</a></li>
+                <li>
+                    <strong>口味</strong>
+                    <a href="####" title="橙皮辫子面的口味" class="big">甜味</a>
+                </li>
+                <li class="br0">
+                    <strong>难度</strong>
+                    <div class="processing_w"><span class="processing processing_nd9"></span><a href="####" title="橙皮辫子面的准备时间" class="small">60分钟</a></div>
+                </li>
+                <li>
+                    <strong>主料</strong>
+                    <a href="####" title="橙皮辫子面的口味" >甜味</a> <a href="####" title="橙皮辫子面的口味">甜味</a>
+                </li>
+                <li>
+                    <strong>辅料</strong>
+                    <a href="####" title="橙皮辫子面的口味">甜味</a> <a href="####" title="橙皮辫子面的口味">甜味</a>
+                </li>
+                <li class="br0">
+                    <strong>配料</strong>
+                    <a href="####" title="橙皮辫子面的口味" >甜味</a> <a href="####" title="橙皮辫子面的口味" >甜味</a>
+                </li>
+            </ul>
+            <div class="post-content">
+                <span style="line-height: 22px;"><b style="line-height: 22px;"><font size="2"
+                                                                                     style="line-height: 20px;">一、食美特社区介绍</font></b></span>
+
+                <div style="line-height: 22px;"><span
+                        style="line-height: 25px; color: rgb(51, 51, 51); font-family: 'Microsoft YaHei', Arial, Helvetica, sans-serif; font-size: 12px;">&nbsp; &nbsp; &nbsp; 我们致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。 我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。 &nbsp;</span>
+                </div>
+                <div style="line-height: 22px;"><span
+                        style="line-height: 25px; color: rgb(51, 51, 51); font-family: 'Microsoft YaHei', Arial, Helvetica, sans-serif; font-size: 12px;">&nbsp; &nbsp;&nbsp;</span><span
+                        style="line-height: 25px; color: rgb(51, 51, 51); font-family: 'Microsoft YaHei', Arial, Helvetica, sans-serif; font-size: 12px;">我们是8090后，我们希望通过我们的努力</span><span
+                        style="line-height: 25px; color: rgb(51, 51, 51); font-family: 'Microsoft YaHei', Arial, Helvetica, sans-serif; font-size: 12px;">，为更多的消费者提供更有效、更有价值的购物决策建议和更节省的购物方式！</span>
+                </div>
+                <div style="line-height: 22px;"><span
+                        style="line-height: 25px; color: rgb(51, 51, 51); font-family: 'Microsoft YaHei', Arial, Helvetica, sans-serif; font-size: 12px;">&nbsp; &nbsp; 我们是8090后，我们始终如一、做最真实的自己！</span>
+                </div>
+                <div style="line-height: 22px;"><span
+                        style="line-height: 25px; color: rgb(51, 51, 51); font-family: 'Microsoft YaHei', Arial, Helvetica, sans-serif;"><font
+                        size="2" style="line-height: 20px;"><b style="line-height: 20px;">二、食美特社区功能</b></font></span>
+                </div>
+                <div style="line-height: 22px;"><span
+                        style="line-height: 25px; color: rgb(51, 51, 51); font-family: 'Microsoft YaHei', Arial, Helvetica, sans-serif; font-size: 12px;">1、注册登录</span>
+                </div>
+                <div style="line-height: 22px;"><span
+                        style="line-height: 25px; color: rgb(51, 51, 51); font-family: 'Microsoft YaHei', Arial, Helvetica, sans-serif; font-size: 12px;">我们提供非常简单的注册登录方式，您可以通过qq、淘宝、微博账号快速登录，并且<b>不会向您的账号发送垃圾信息</b>，你也可以通过邮箱注册，只需要10秒钟即可以完成注册，并不需要额外的步骤。</span>
+                </div>
+
+            </div>
         </div>
         <!-- post right a  -->
         <div class="post-right">
-                sss
+            <!-- 跟 发布者相关的帖子 和  加入的小站-->
+                <div class="poster-others">
+                    <dl class="post">
+                        <dt>TA发表的贴子</dt>
+                        <dd><a href="/topic/3585.html" target="_blank">器世界 精品茶具小编为你讲解喝功夫茶的品茗八法</a></dd>
+                        <dd><a href="/topic/3576.html" target="_blank">器世界 手工柴烧侧把壶  原创设计 品质生活</a></dd>
+                        <dd><a href="/topic/3574.html" target="_blank">器世界-人和家兴 手绘婴戏图茶壶   原创设计品质生活</a></dd>
+                        <dd><a href="/topic/3541.html" target="_blank">器世界 品茗器皿之——三才杯</a></dd>
+                        <dd><a href="/topic/3525.html" target="_blank">    名瓷 器世界 （中国文化报专访）</a></dd>
+                    </dl>
+                    <dl class="site">
+                        <dt>TA加入的小站</dt>
+                        <dd><a href="/site/detail/528.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/B13/B13C56A6B4AEDF8E3E1FBDDA807B4A84_198x198.jpg_50x10000.jpg" style="opacity: 1; ">最爱晒单</a></dd>
+                        <dd><a href="/site/detail/359.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/A3D/A3DA6597E52C2427483E0E87D155831D_198x198.jpg_50x10000.jpg" style="opacity: 1; ">想去限时购</a></dd>
+                        <dd><a href="/site/detail/212.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/285/2855B1E79CC7451B2117133A7A213BB7_640x640.jpg_50x10000.jpg">想去专题</a></dd>
+                        <dd><a href="/site/detail/481.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/E98/E98A2165D2DB94B25B9CD7B0C206C6FF_440x440.jpg_50x10000.jpg">新青年创造</a></dd>
+                        <dd><a href="/site/detail/327.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/2F7/2F71A8CC340C6FC39774C2CAAEB4B9D7_180x180.jpg_50x10000.jpg" style="opacity: 1; ">想去官方站</a></dd>
+                    </dl>
+                </div>
+
+                <div class="post-recommend">
+
+                </div>
+
         </div>
     </div>
 
