--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -59,7 +59,7 @@
                 <li><span>-</span></li>
                 <li class='@("on".when(nav == "themes"))'>  <a href="/themes" >主题</a> </li>
                 <li><span>-</span></li>
-               <li class='@("on".when(nav == "cookbook"))'><a href="/cookbook" >食谱</a></li>
+               <li class='@("on".when(nav == "cookbook"))'><a href="/cookbook" >私房菜</a></li>
                 <li class='@("on".when(nav == "site"))'><a href="/site" >小站</a></li>
                 
             </ul>
