adjust site post

--- a/app/views/sites/post.scala.html
+++ b/app/views/sites/post.scala.html
@@ -15,7 +15,7 @@ title =  "食美特，不一样的生活"
         <div class="post-left">
             <div class="poster clearfix">
 
-                    <a class="pic"><img src="/images/user/default.jpg" width="100" height="100" class="c"> </a>
+                    <a class="pic"><img src="/images/user/default.jpg" width="150" height="150" class="c"> </a>
                     <span><a>zuosanshao</a></span>
                     <span>发表于<em>2013/06/24</em></span>
                    <span>22人看过</span>
@@ -24,15 +24,27 @@ title =  "食美特，不一样的生活"
                     <a class="follow-btn">+关注</a>
                 </div>
             </div>
-                   <div class="post-site">
-                       <a><img width="160" height="160" src="/assets/temp/site.jpg"></a>
-                       <h3 class="site-title"><a> xxxx xxxxx 小站</a></h3>
-                       <div class="back-site"><a>返回小站</a> </div>
-                       <div class="follow clearfix">
-                           <a class="follow-btn"> + 加入小站</a>
-                           <!-- <div class="followed-btn-big">已关注<span class="mr5 ml5">|</span><a rel="removefollow" data-followtype="5" data-usernick="duanyu200888" data-userid="3" href="javascript:;">取消</a></div>-->
-                       </div>
-                   </div>
+            <div class="poster-others">
+                <dl class="posts">
+                    <dt>TA发表的贴子</dt>
+                    <dd class="ofh"><a href="/topic/3585.html" target="_blank">器世界 精品茶具小编为你讲解喝功夫茶的品茗八法</a></dd>
+                    <dd class="ofh"><a href="/topic/3576.html" target="_blank">器世界 手工柴烧侧把壶  原创设计 品质生活</a></dd>
+                    <dd class="ofh"><a href="/topic/3574.html" target="_blank">器世界-人和家兴 手绘婴戏图茶壶   原创设计品质生活</a></dd>
+                    <dd class="ofh"><a href="/topic/3541.html" target="_blank">器世界 品茗器皿之——三才杯</a></dd>
+                    <dd class="ofh"><a href="/topic/3525.html" target="_blank">    名瓷 器世界 （中国文化报专访）</a></dd>
+                </dl>
+                <dl class="site">
+                    <dt>TA加入的小站</dt>
+                    <dd><a href="/site/detail/528.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/B13/B13C56A6B4AEDF8E3E1FBDDA807B4A84_198x198.jpg_50x10000.jpg" style="opacity: 1; ">最爱晒单</a></dd>
+                    <dd><a href="/site/detail/359.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/A3D/A3DA6597E52C2427483E0E87D155831D_198x198.jpg_50x10000.jpg" style="opacity: 1; ">想去限时购</a></dd>
+                    <dd><a href="/site/detail/212.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/285/2855B1E79CC7451B2117133A7A213BB7_640x640.jpg_50x10000.jpg">想去专题</a></dd>
+                    <dd><a href="/site/detail/481.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/E98/E98A2165D2DB94B25B9CD7B0C206C6FF_440x440.jpg_50x10000.jpg">新青年创造</a></dd>
+                    <dd><a href="/site/detail/327.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/2F7/2F71A8CC340C6FC39774C2CAAEB4B9D7_180x180.jpg_50x10000.jpg" style="opacity: 1; ">想去官方站</a></dd>
+
+                </dl>
+            </div>
+
+
 
 
         </div>
@@ -41,16 +53,16 @@ title =  "食美特，不一样的生活"
               <h3 class="post-title"> 器世界 手工柴烧侧把壶 原创设计 品质生活 </h3>
 
             <ul class="menu clearfix">
-                <li><strong>工艺</strong><a href="####" title="橙皮辫子面的工艺" class="big">烘焙</a></li>
-                <li>
+                <li class="bl1 bt1"><strong>工艺</strong><a href="####" title="橙皮辫子面的工艺" class="big">烘焙</a></li>
+                <li class="bt1">
                     <strong>口味</strong>
                     <a href="####" title="橙皮辫子面的口味" class="big">甜味</a>
                 </li>
-                <li class="br0">
+                <li class="bt1">
                     <strong>难度</strong>
                     <div class="processing_w"><span class="processing processing_nd9"></span><a href="####" title="橙皮辫子面的准备时间" class="small">60分钟</a></div>
                 </li>
-                <li>
+                <li class="bl1" >
                     <strong>主料</strong>
                     <a href="####" title="橙皮辫子面的口味" >甜味</a> <a href="####" title="橙皮辫子面的口味">甜味</a>
                 </li>
@@ -58,7 +70,7 @@ title =  "食美特，不一样的生活"
                     <strong>辅料</strong>
                     <a href="####" title="橙皮辫子面的口味">甜味</a> <a href="####" title="橙皮辫子面的口味">甜味</a>
                 </li>
-                <li class="br0">
+                <li>
                     <strong>配料</strong>
                     <a href="####" title="橙皮辫子面的口味" >甜味</a> <a href="####" title="橙皮辫子面的口味" >甜味</a>
                 </li>
@@ -93,28 +105,34 @@ title =  "食美特，不一样的生活"
         </div>
         <!-- post right a  -->
         <div class="post-right">
-            <!-- 跟 发布者相关的帖子 和  加入的小站-->
-                <div class="poster-others">
-                    <dl class="post">
-                        <dt>TA发表的贴子</dt>
-                        <dd><a href="/topic/3585.html" target="_blank">器世界 精品茶具小编为你讲解喝功夫茶的品茗八法</a></dd>
-                        <dd><a href="/topic/3576.html" target="_blank">器世界 手工柴烧侧把壶  原创设计 品质生活</a></dd>
-                        <dd><a href="/topic/3574.html" target="_blank">器世界-人和家兴 手绘婴戏图茶壶   原创设计品质生活</a></dd>
-                        <dd><a href="/topic/3541.html" target="_blank">器世界 品茗器皿之——三才杯</a></dd>
-                        <dd><a href="/topic/3525.html" target="_blank">    名瓷 器世界 （中国文化报专访）</a></dd>
+            <div class="post-site">
+                <a><img width="180" height="180" src="/assets/temp/site.jpg"></a>
+                <h3 class="site-title"><a> xxxx xxxxx 小站</a></h3>
+                <div class="back-site"><a>返回小站</a> </div>
+                <div class="follow clearfix">
+                    <a class="follow-btn"> + 加入小站</a>
+                    <!-- <div class="followed-btn-big">已关注<span class="mr5 ml5">|</span><a rel="removefollow" data-followtype="5" data-usernick="duanyu200888" data-userid="3" href="javascript:;">取消</a></div>-->
+                </div>
+            </div>
+
+                <div class="site-others">
+                    <dl class="posts">
+                        <dt>小站动态</dt>
+                        <dd class="ofh"><a href="/topic/3585.html" target="_blank">器世界 精品茶具小编为你讲解喝功夫茶的品茗八法</a></dd>
+                        <dd class="ofh"><a href="/topic/3576.html" target="_blank">器世界 手工柴烧侧把壶  原创设计 品质生活</a></dd>
+                        <dd class="ofh"><a href="/topic/3574.html" target="_blank">器世界-人和家兴 手绘婴戏图茶壶   原创设计品质生活</a></dd>
+                        <dd class="ofh"><a href="/topic/3541.html" target="_blank">器世界 品茗器皿之——三才杯</a></dd>
+                        <dd class="ofh"><a href="/topic/3525.html" target="_blank">    名瓷 器世界 （中国文化报专访）</a></dd>
+
                     </dl>
-                    <dl class="site">
-                        <dt>TA加入的小站</dt>
+                    <dl class="members">
+                        <dt>小站居民</dt>
                         <dd><a href="/site/detail/528.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/B13/B13C56A6B4AEDF8E3E1FBDDA807B4A84_198x198.jpg_50x10000.jpg" style="opacity: 1; ">最爱晒单</a></dd>
                         <dd><a href="/site/detail/359.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/A3D/A3DA6597E52C2427483E0E87D155831D_198x198.jpg_50x10000.jpg" style="opacity: 1; ">想去限时购</a></dd>
                         <dd><a href="/site/detail/212.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/285/2855B1E79CC7451B2117133A7A213BB7_640x640.jpg_50x10000.jpg">想去专题</a></dd>
                         <dd><a href="/site/detail/481.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/E98/E98A2165D2DB94B25B9CD7B0C206C6FF_440x440.jpg_50x10000.jpg">新青年创造</a></dd>
                         <dd><a href="/site/detail/327.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/2F7/2F71A8CC340C6FC39774C2CAAEB4B9D7_180x180.jpg_50x10000.jpg" style="opacity: 1; ">想去官方站</a></dd>
                     </dl>
-                </div>
-
-                <div class="post-recommend">
-
                 </div>
 
         </div>
