--- a/app/views/sites/editPost.scala.html
+++ b/app/views/sites/editPost.scala.html
@@ -11,6 +11,7 @@ title =  "食美特，不一样的生活"
         <div  >
             <form id="J_TopicEditFm" class="edit-form" method="post" action="@controllers.routes.Themes.save">
                 <input type="hidden" name="id" value=''>
+                <input type="hidden" name="cid" id="J_cid" value=''>
 
                 <div class="form-row clearfix">
                     <label><span class="rc">*</span>标题：</label>
@@ -19,25 +20,14 @@ title =  "食美特，不一样的生活"
                         <p>还可以输入<em id="J_TitleNum"></em>字</p>
                     </div>
                 </div>
-                <div class="form-row clearfix">
-                    <label>介绍：</label>
-                    <div class="fm-item">
-                        <textarea id="J_TopicIntro" class="b-textarea intro-txa" name="intro"></textarea>
-                        <p>还可以输入<em id="J_IntroNum"></em>字</p>
-                    </div>
-                </div>
+
                 <div class="form-row clearfix">
                     <label>分类：</label>
                     <div class="fm-item">
-                        <select id="J_SelCag" name="cid">
-                            <option value="">选择分类</option>
-                            @for(c<-models.site.SiteCate.values.toList.sortBy(x=>x.id)){
-                            <option value="@c.id" >@c</option>
 
-
+                            @for(c<-models.site.PostCate.values.toList.sortBy(x=>x.id)){
+                            <a href="javascript:void(0)" class="type" data-id="@c.id">@c</a>
                             }
-
-                        </select>
 
                         <p>选择相应的分类，让大家更容易找到你的小站</p>
 
@@ -45,7 +35,7 @@ title =  "食美特，不一样的生活"
                 </div>
 
                 <div class="form-row clearfix">
-                    <label>上传图片：</label>
+                    <label>上传主图：</label>
                     <div class="fm-item">
                         <input type="button" value="上传本地图片" class="bbl-btn upload-cover">
                         <input type="file" class="upload-btn" id="J_LocalImgFormSubmit" name="filedata">
