--- a/app/views/sites/editSite.scala.html
+++ b/app/views/sites/editSite.scala.html
@@ -12,10 +12,10 @@ title =  "食美特，不一样的生活"
 
         <div class="site-edit clearfix">
             <h2>申请小站</h2>
-            <div  >
+            <div class="col-left">
                 <form id="J_TopicEditFm" class="edit-form" method="post" action="@controllers.routes.Themes.save">
                     <input type="hidden" name="id" value=''>
-
+                    <input type="hidden" name="cid" id="J_cid" value="">
                     <div class="form-row clearfix">
                         <label><span class="rc">*</span>标题：</label>
                         <div class="fm-item">
@@ -33,15 +33,15 @@ title =  "食美特，不一样的生活"
                     <div class="form-row clearfix">
                         <label>分类：</label>
                         <div class="fm-item">
-                            <select id="J_SelCag" name="cid">
-                                <option value="">选择分类</option>
-                                @for(c<-models.site.SiteCate.values.toList.sortBy(x=>x.id)){
-                                <option value="@c.id" >@c</option>
 
+
+                                @for(c<-models.site.SiteCate.values.toList.sortBy(x=>x.id)){
+
+                            <a href="javascript:void(0)" class="type" data-id="@c.id">@c</a>
 
                                 }
 
-                            </select>
+
 
                             <p>选择相应的分类，让大家更容易找到你的小站</p>
 
@@ -49,7 +49,7 @@ title =  "食美特，不一样的生活"
                     </div>
 
                     <div class="form-row clearfix">
-                        <label>上传图片：</label>
+                        <label>上传站牌：</label>
                         <div class="fm-item">
                                     <input type="button" value="上传本地图片" class="bbl-btn upload-cover">
                                     <input type="file" class="upload-btn" id="J_LocalImgFormSubmit" name="filedata">
@@ -70,6 +70,14 @@ title =  "食美特，不一样的生活"
                         <input type="submit" class="bbl-btn submit" value="提交申请">
                     </div>
                 </form>
+            </div>
+            <div class="col-right">
+                <div class="about">
+                    <h5>关于小站申请：</h5>
+                    <div class="bd">
+                        小站总舵主正在对你的小站进行审核，审核周期为一个工作日。审核结果会通过想去网的私信，或者你留下的联系方式通知到你。希望能够带给你惊喜，请耐心等待。
+                    </div>
+                </div>
             </div>
         </div>
 
