adjust post edit page

--- a/app/views/sites/editPost.scala.html
+++ b/app/views/sites/editPost.scala.html
@@ -28,7 +28,38 @@ title =  "食美特，不一样的生活"
                             @for(c<-models.site.PostCate.values.toList.sortBy(x=>x.id)){
                             <a href="javascript:void(0)" class="type" data-id="@c.id">@c</a>
                             }
-
+                         <div>
+                           <dl>
+                             <dt>
+                                 <label>工艺：</label>
+                             </dt>
+                             <dd>
+                                 <select>
+                                     <option>dddddd</option>
+                                 </select>
+                             </dd>
+                         </dl>
+                             <dl>
+                                 <dt>
+                                     <label>难度：</label>
+                                 </dt>
+                                 <dd>
+                                     <select>
+                                         <option>dddddd</option>
+                                     </select>
+                                 </dd>
+                             </dl>
+                             <dl>
+                                 <dt>
+                                     <label>工艺：</label>
+                                 </dt>
+                                 <dd>
+                                     <select>
+                                         <option>dddddd</option>
+                                     </select>
+                                 </dd>
+                             </dl>
+                         </div>
                         <p>选择相应的分类，让大家更容易找到你的小站</p>
 
                     </div>
