--- a/app/views/sites/editPost.scala.html
+++ b/app/views/sites/editPost.scala.html
@@ -28,7 +28,7 @@ title =  "食美特，不一样的生活"
                             @for(c<-models.site.PostCate.values.toList.sortBy(x=>x.id)){
                             <a href="javascript:void(0)" class="type" data-id="@c.id">@c</a>
                             }
-                         <div>
+                         <div class="sub-item">
                            <dl>
                              <dt>
                                  <label>工艺：</label>
