--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -1498,6 +1498,39 @@ input:-moz-placeholder { font-size:12px; }
 .guang-editor .imgWrap .netImg .bbl-btn{width:60px;margin-top:2px;float:right;}
 .guang-editor .imgWrap .tipbox-up{left:285px;}
 .guang-editor .base-input{width:290px;float:left;}
+.guang-editor .videoWrap {
+    top: 36px;
+    left: 10px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px
+}
+
+.guang-editor .videoWrap #J_InsertVideo {
+    width: 60px;
+    margin-top: 2px;
+    float: right
+}
+
+.guang-editor .videoWrap .content .tipbox-up {
+    left: 340px
+}
+
+.guang-editor .videoWrap .content .title {
+    padding-bottom: 10px;
+    font-weight: normal
+}
+
+.guang-editor .videoWrap .content .sg-source p {
+    height: 20px;
+    line-height: 20px;
+    padding: 8px 0 5px 0
+}
+
+.guang-editor .videoWrap .sg-form .sg-input {
+    margin-right: 0
+}
 
 .icon-youku{height:20px;color:#666;line-height:20px;padding-left:22px;padding-right:6px;float:left;background:transparent url(images/edit_toolbar.gif) 0px -123px no-repeat;}
 .icon-tudou{height:20px;color:#666;line-height:20px;padding-left:22px;padding-right:6px;float:left;background:transparent url(images/edit_toolbar.gif) 0px -148px no-repeat;}
