--- a/app/views/sites/editPost.scala.html
+++ b/app/views/sites/editPost.scala.html
@@ -25,9 +25,9 @@ title =  "食美特，不一样的生活"
                     <label>分类：</label>
                     <div class="fm-item">
 
-                            @for(c<-models.site.PostCate.values.toList.sortBy(x=>x.id)){
-                            <a href="javascript:void(0)" class="type" data-id="@c.id">@c</a>
-                            }
+
+                            <a href="javascript:void(0)" class="type" data-id="0" data-type="sifangcai">私房菜</a>
+                            <a href="javascript:void(0)" class="type" data-id="0">其他</a>
                          <div class="sub-item clearfix">
                            <dl>
                              <dt>
@@ -143,6 +143,7 @@ title =  "食美特，不一样的生活"
             $.smeite.dialog.isLogin();
         }
         $.smeite.editor = $.smeite.Editor();
+
         init.load("app/site/site.edit");
     });
 </script>
