--- a/app/views/sites/editSite.scala.html
+++ b/app/views/sites/editSite.scala.html
@@ -51,9 +51,18 @@ title =  "食美特，不一样的生活"
                     <div class="form-row clearfix">
                         <label>上传站牌：</label>
                         <div class="fm-item">
-                                    <input type="button" value="上传本地图片" class="bbl-btn upload-cover">
+                                    <input type="file" value="上传本地图片" class="bbl-btn upload-cover">
                                     <input type="file" class="upload-btn" id="J_LocalImgFormSubmit" name="filedata">
                                     <p  class="fl">支持GIF、JPG、PNG,大小不超过2M</p>
+                            <form id="J_PagePicUploadForm" target="pagePicUploadTarget" action="@controllers.routes.Upload.uploadThemeStylePic"
+                                  method="post" enctype="multipart/form-data">
+                                <button class="bbl-btn">选择文件</button>
+                                <input type="file" name="filedata" class="file-input" id="J_PageFileInput"
+                                       onchange="window.submitPic(this, 'page')" size="20" hidefocus="true">
+                                <input type="hidden" name="picType" value="themeBg">
+                            </form>
+                            <iframe name="pagePicUploadTarget" id="pagePicUploadTarget" width="0" height="0"
+                                    style="display:none" frameborder="0" allowtransparent="yes" scrolling="no"></iframe>
                         </div>
                     </div>
 
