--- a/app/views/sites/editPost.scala.html
+++ b/app/views/sites/editPost.scala.html
@@ -100,7 +100,7 @@ title =  "食美特，不一样的生活"
                 <div class="form-row clearfix">
                     <label>上传主图：</label>
                     <div class="fm-item">
-                        <input type="button" value="上传本地图片" class="bbl-btn upload-cover">
+                        <input type="file" value="上传本地图片" class="bbl-btn upload-cover">
                         <input type="file" class="upload-btn" id="J_LocalImgFormSubmit" name="filedata">
                         <p  class="fl">支持GIF、JPG、PNG,大小不超过2M</p>
                     </div>
