--- a/app/views/qqapps/fanjijie.scala.html
+++ b/app/views/qqapps/fanjijie.scala.html
@@ -101,7 +101,7 @@
 <!--单个商品 end-->
 
 </div>
-    <div class="clearfix pt20 pb20">
+    <div class="clearfix pt20 pb20 pr30">
         <div class="pagin fr pagination" id="J_Pagination">
             @if(page.nums.length>1){
             @page.prev.map { page =>
@@ -134,8 +134,8 @@
     </ul>
     </div>
 
-    <div class="footer">
-        商务合作 QQ：1469909930  客服邮箱：smeite@@qq.com 用户讨论群：319962802
+    <div class="footer" style="margin:5px auto;text-align: center">
+        声明： [反季节] 应用由 杭州大懒虫网络技术有限公司 提供，联系我们QQ：1469909930 QQ群：319962802  客服邮箱：smeite@@qq.com
     </div>
 
 </div>
