--- a/app/views/sites/editSite.scala.html
+++ b/app/views/sites/editSite.scala.html
@@ -51,7 +51,10 @@ title =  "食美特，不一样的生活"
                     <div class="form-row clearfix">
                         <label>上传站牌：</label>
                         <div class="fm-item">
-                                    <img id="J_uploadImgShow" />
+                            <div class="site-logo">
+                                <img id="J_uploadImgShow" />
+                            </div>
+
                                     <input type="button" value="上传本地图片" id="J_uploadImage" class="bbl-btn upload-cover">
                                     <input type="hidden" id="J_uploadImg" name="pic">
                                     <p  class="fl">支持GIF、JPG、PNG,大小不超过2M</p>
